# LeapDroneController

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pythonrequirements.txt
docs/: application_overview  config_and_client  network_based_overview  portingpython  workflow
parrot/parrotclient/: client.py
src/: main.cpp  process.cpp  process.h
src/configuration/: config.h  config.txt  main.cpp  parser.cpp  parser.h
src/configuration/exceptions/: exceptions.h
src/droneclient/: client.py  config.txt  main.cpp  mamboclient.cpp  mamboclient.h
src/helpers/: leaphelper.h
src/parrotclient/: ParrotClient.cpp  ParrotClient.h
src/process/: child.py  main.cpp  process.cpp  process.h
